[tool.poetry]
name = "agents-fun-flash-fun"
version = "0.1.0"
description = ""
authors = ["8baller <8ball030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.1"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
